@@ -1,3 +1,10 @@
+Wed May 19 20:06:11 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* iseq_compile_each (NODE_DEFINED): put nil first to fix stack
+	  consistency.  [ruby-core:30293]
+	  Now, lfinish[0] of defined_expr seems not to be used.  Refactoring
+	  may be needed.
+
 Wed May 19 17:22:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* version.h (RUBY_VERSION_TEENY): revert to API version 1.9.1.
